--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,15 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
+
+    <string name="profile_title">Profil</string>
+    <string name="profile_name">Korisnik:</string>
+    <string name="profile_points">Poeni:</string>
+    <string name="profile_badges">Bedževi</string>
+    <string name="open_profile">Otvori profil</string>
+    <string name="mark_as_visited">Označi kao posećeno</string>
+    <string name="marked_as_visited">Zabeleženo! +poeni</string>
+
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
         volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
